--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -45,7 +45,7 @@ jobs:
       id: previoustag
       uses: "WyriHaximus/github-action-get-previous-tag@v1"
       with:
-        fallback: ${{join('[fromJson(env.VERSION_JSON).baseVersion, 0]', '.')}}
+        fallback: ${{join(fromJson(env.VERSION_JSON).baseVersion, '.0'])}}
 
     - name: Get next minor version
       id: semvers
